[tool.poetry]
name = "caesar_cipher"
version = "0.1.0"
description = ""
authors = ["Haneen Hashlamoun <haneen.hashlamoun@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
nltk = "^3.6.5"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
